# dotfiles

./: .gitignore  AGENTS_USAGE.md  init.lua.bak  lazy-lock.json  workflow-overview.md
agents/: interrogator.agent.md  librarian.agent.md  lorekeeper.agent.md  planner.agent.md  tester.agent.md
docker/pi/: Dockerfile  compose.yaml  settings.json
install/: windows-full.ps1  windows-restricted.ps1
legacy-pipeline/: README.md
legacy-pipeline/prompts/: implement-singlepass.prompt.md  implement.prompt.md  plan-narrow.prompt.md  propose-ticket-edit.prompt.md  review-singlepass.prompt.md  review-ticket.prompt.md  split-ticket.prompt.md  test-criterion.prompt.md  test-refine.prompt.md  validate-test-coverage.prompt.md  validate.prompt.md
local/git/: .gitconfig.local.template
local/machines/home/: .gitconfig.local  profile.local.ps1
local/machines/work/: .gitconfig.local  profile.local.ps1  profile.local.sh
local/powershell/: profile.local.ps1.template
lua/: keybindings.lua
lua/base/: editor.lua  init.lua  treesitter.lua  ui.lua
lua/base/lsp/: format.lua  init.lua  keymaps.lua
lua/config/: autocmds.lua  init.lua  keymaps.lua  lazy.lua
lua/pde/: cpp.lua  go.lua  lua.lua  python.lua  rust.lua
lua/plugins/: autocompletion.lua  bufferline.lua  clangd.lua  cmake.lua  colourscheme.lua  dressing.lua  lsp_lines.lua  navic.lua  neogit.lua  neotree.lua  rust_tools.lua  scrollbar.lua  statuscol.lua  telescope.lua  treesitter.lua  undotree.lua
pi/agent/: AGENTS.md  SYSTEM.md  auth.json  settings.json
prompts/: explore-criterion.prompt.md  explore-ticket.prompt.md  explore.prompt.md  file-knowledge.prompt.md  implement-criterion-direct.prompt.md  implement-criterion-refactor.prompt.md  implement-criterion.prompt.md  implement-refine.prompt.md  implement-singlepass.prompt.md  narrow-plan.prompt.md  plan-narrow.prompt.md  plan.prompt.md  recheck-criterion.prompt.md  research-assistant.prompt.md  review-singlepass.prompt.md  review-test-quality.prompt.md  review.prompt.md  test-criterion.prompt.md  test-singlepass.prompt.md  test.prompt.md  validate-coverage.prompt.md  validate-test-coverage.prompt.md
shared/editorconfig/: .editorconfig
shared/git/: .gitconfig  .gitignore_global
shared/nvim/: init.lua
shared/nvim/lua/: barbecue.lua  debugging.lua  gitsigns.lua  lspconfig.lua  lspsaga.lua  lualine.lua  neotest.lua  noice.lua  nvimtree.lua  plugins.lua  todo-comments.lua
shared/research-assistant/: README.md  core.md
shared/starship/: starship.toml
shared/vim/: .vimrc
templates/: config-template.md  index-template.md  reinjection-format.md  session-note-format.md  tdd-plan-format.md  tdd-test-files-format.md  toolchain-template.md  updated-plan-format.md
templates/obsidian-vault-setup/: .gitignore
templates/obsidian-vault-setup/.obsidian/: app.json
ticket-pipeline/: .pipeline-log.jsonl  BENCHMARKS.md  pyproject.toml
ticket-pipeline/fixtures/sa452/: fixture.json  ticket.md
ticket-pipeline/fixtures/sa500/: fixture.json
ticket-pipeline/fixtures/sa501-proposed/: ticket.md
ticket-pipeline/fixtures/sa502/: fixture.json  plan-good.md  ticket.md
ticket-pipeline/tests/: test_feedback.py  test_git_workflow.py  test_grounding.py  test_next_step_consolidation.py  test_refactor_check.py  test_repo_context.py  test_scoped_criteria.py
ticket-pipeline/ticket_pipeline/: bench.py  bench_block.py  cli.py  create_child_tickets.py  drive.py  explore_ticket.py  give_feedback.py  implement_step.py  list_models.py  next_step.py  prep_ticket.py  propose_ticket_edit.py  push_ticket.py  reset_criterion.py  reset_pipeline.py  reset_workflow.py  review_ticket.py  split_ticket.py  status.py  update_ticket.py
ticket-pipeline/ticket_pipeline/lib/: ai_client.py  fetch_ticket.py  pipeline_lib.py  repo_context.py  toolchains.py  tools.py  verbosity.py
windows/powershell/: Microsoft.PowerShell_profile.ps1
windows/powershell/modules/: aliases.ps1  env.ps1  functions.ps1  (+1 more)
windows/terminal/: settings.json
windows/vscode/: extensions.txt  settings.json
(+23 files in other folders)
