# Editable-install only (`pip install -e .`) - pipeline_lib.PROMPTS_DIR
# and bench.py's fixtures dir are both resolved relative to this
# package's __file__ at import time, up to the prompts/ and fixtures/
# directories that live alongside this pyproject.toml (not inside the
# ticket_pipeline/ package itself). An editable install keeps the
# source in place, so that resolution stays valid; a regular `pip
# install .` would copy the package into site-packages and break both
# paths. This is a personal dev-pipeline tool run against a live repo
# checkout, not a distributable artifact, so that tradeoff is fine.
[project]
name = "ticket-pipeline"
version = "0.1.0"
description = "Linear-ticket-driven TDD pipeline: fetch/plan/narrow, per-criterion test-write/implement/gate, ticket quality review, and an interactive context-explorer session."
requires-python = ">=3.11"
dependencies = [
    "rich",
]

[project.scripts]
scaffold = "ticket_pipeline.cli:main"

# Every script (push_ticket, review-ticket, next_step, ..., plus
# bench/bench_block) is reachable as `scaffold <name>` via cli.py's
# dispatcher rather than its own console-script entry - one command to
# remember instead of fourteen. bench/bench_block are grouped under
# `scaffold`'s "Advanced" section since they're situational benchmarking
# tools, not everyday ticket workflow; still directly runnable via
# `python -m ticket_pipeline.bench` / `...bench_block` if preferred.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ticket_pipeline", "ticket_pipeline.*"]

[tool.setuptools.package-data]
"ticket_pipeline.lib" = ["model-pricing.toml"]
